[metadata]
# replace with your username:
name = randSTRING-shengxio
version = 0.0.1
author = Sheng Xiong Ding
author_email = shengxio@mail.analytics.hbs.edu
description = A method package for generating random string with prefixed content.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shengxio/randSTR
project_urls =
    Bug Tracker = https://github.com/shengxio/randSTR/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src